# turkey

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  Dockerfile  Makefile  README.md  requirements.txt  setup.py
apps/barnes/: CMakeLists.txt
apps/barnes/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/barnes/src/: code.c  code.h  code_io.c  code_io.h  defs.h  getparam.c  getparam.h  grav.c  grav.h  load.c  load.h  stdinc.h  util.c  util.h  vectmath.h
apps/blackscholes/: CMakeLists.txt  ascii2binary.cpp  main.c  main_equi.cpp  main_pool.cpp  main_pthread.cpp  main_pthread_equi.cpp  main_turkey.cpp  options.h  pthreads.m4
apps/blackscholes/conf/: equi.json  native.json  resizable.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/bodytrack/: CMakeLists.txt
apps/bodytrack/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/bodytrack/src/: Makefile  config.status  libtool
apps/bodytrack/src/FlexImageLib/: FlexIO.cpp  FlexIO.h  Makefile
apps/bodytrack/src/FlexImageLib/.deps/: FlexIO.Plo  FlexImage.Plo
apps/bodytrack/src/TrackingBenchmark/: AsyncIO.cpp  AsyncIO.h  Makefile  TrackingModel.cpp  TrackingModel.h  TrackingModelPthread.cpp  TrackingModelPthread.h  main.cpp
apps/bodytrack/src/TrackingBenchmark/threads/: Barrier.h  CMakeLists.txt  LockTypes.h  Makefile  Mutex.cpp  Mutex.h  RWLock.cpp  RWLock.h  Thread.h  WorkerGroup.cpp  WorkerGroup.h
apps/canneal/: CMakeLists.txt
apps/canneal/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/canneal/src/: annealer_thread_turkey.h  netlist.cpp  netlist.h  netlist_elem.h
apps/canneal/src/pthread/: main_pthread.cpp
apps/canneal/src/tools/: ascii2binary.cpp
apps/canneal/src/turkey/: annealer_thread_turkey.cpp  main_turkey.cpp
apps/dedup/: CMakeLists.txt
apps/dedup/conf/: native.json  simdev.json  simmedium.json  test.json
apps/dedup/src/: queue.h
apps/dedup/src/turkey/: dedup.c  dedup.cpp  encoder.c  encoder.cpp  mpmc.h
apps/dummy/: CMakeLists.txt  docker.json  main.cpp
apps/dummy/src/: main.cpp
apps/facesim/: CMakeLists.txt
apps/facesim/conf/: native.json  simlarge.json  test.json
apps/facesim/src/Benchmarks/facesim/: main.cpp
apps/facesim/src/Public_Library/: CMakeLists.txt
apps/facesim/src/Public_Library/Collisions_And_Interactions/: TETRAHEDRON_HIERARCHY.h
apps/facesim/src/Public_Library/Read_Write/: FILE_UTILITIES.cpp  FILE_UTILITIES.h
apps/facesim/src/Public_Library/Thread_Utilities/: THREAD_POOL.cpp
apps/facesim/src/TaskQ/: CMakeLists.txt
apps/facesim/src/TaskQ/lib/: taskQDistCommon.c  taskQDistFixed.h  taskQInternal.h
apps/ferret/: CMakeLists.txt
apps/ferret/conf/: native.json  simdev.json  simmedium.json
apps/ferret/src/image/: CMakeLists.txt  extract.c  image.c
apps/ferret/src/src/: CMakeLists.txt
apps/ferret/src/src/lsh/: CMakeLists.txt
apps/ferret/src/tools/: CMakeLists.txt
apps/fluidanimate/: CMakeLists.txt
apps/fluidanimate/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/fluidanimate/src/: fluidview.cpp  turkey.cpp
apps/freqmine/: CMakeLists.txt
apps/freqmine/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/freqmine/src/: fpmax.cpp
apps/straw/: CMakeLists.txt
apps/straw/src/: args.h  main.cpp  straw.c
apps/streamcluster/: CMakeLists.txt
apps/streamcluster/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/streamcluster/src/: main.cpp
apps/streamcluster/src/PStream/: FileStream.hpp  PStream.h  SimStream.hpp
apps/streamcluster/src/TBB/: TBB.hpp
apps/streamcluster/src/common/: Point.h  common.hpp  utils.hpp
apps/streamcluster/src/pthread/: pthread.hpp
apps/streamcluster/src/turkey/: parsec_barrier.cpp
apps/swaptions/: CMakeLists.txt
apps/swaptions/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/swaptions/src/: HJM_Securities.cpp  HJM_Securities.h  nr_routines.c  nr_routines.h
apps/swaptions/src/turkey/: HJM_Securities.cpp
apps/vips/: .gitignore  CMakeLists.txt
apps/vips/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json
apps/vips/src/: Makefile.in  aclocal.m4  bootstrap.sh  configure
apps/vips/src/doc/: Makefile  Makefile.in
apps/vips/src/doc/reference/: Makefile  Makefile.in
apps/vips/src/libvips/: Makefile  Makefile.in  config.h  config.status  libtool  vips-7.22.pc
apps/vips/src/libvipsCC/: Makefile.in
apps/vips/src/man/: Makefile.in
apps/vips/src/swig/: Makefile.in
apps/vips/src/tools/: Makefile.in
apps/x264/: .gitignore  CMakeLists.txt
apps/x264/conf/: native.json  simdev.json  simlarge.json  simmedium.json  simsmall.json  test.json
apps/x264/parsec/: gcc-pthreads.bldconf
apps/x264/src/: configure
apps/x264/src/common/: set.c
apps/x264/src/encoder/: analyse.c  analyse.h  macroblock.h  me.h  ratecontrol.h  rdo.c  rdo.h  set.h  slicetype.c
docker/: dev
lib/folly/: CMakeLists.txt
lib/wangle/: CMakeLists.txt
lib/yasm/: CMakeLists.txt
lib/zmq/: CMakeLists.txt
src/: BUCK  CMakeLists.txt  Client.cpp  Client.h  Common.h  Container.cpp  Container.h  Docker.cpp  Docker.h  Pool.cpp  Pool.h  ProcReader.cpp  ProcReader.h  Server.cpp  Server.h  client.c  main.cpp  main_client.cpp  main_server.cpp
src/cgroup/: CMakeLists.txt  cgroup.c  cgroup.h
src/client/: CMakeLists.txt  block.h  list.c  list.h  pool.h  turkey.c  turkey.h
src/common/: CMakeLists.txt  common.c  common.fbs  common.h  messages.h  test.fbs
src/docker/: CMakeLists.txt  Container.cpp  Container.h  Docker.cpp  Docker.h
src/fbs/: CMakeLists.txt  fbs.c  fbs.h  message.fbs  message_generated.h  turkey_msg_register_client.fbs  turkey_shm_cpu.fbs  turkey_shm_data.fbs
src/server/: CMakeLists.txt  Server.cpp  Server.h
src/utils/: CMakeLists.txt  cycle_utils.c  cycle_utils.h  cycles.c  cycles.h  general.c  general.h  general_utils.h
(+389 files in other folders)
