cmake_minimum_required (VERSION 3.5)

include (ExternalProject)

set (FOLLY_EXTERNAL_PROJECT folly-git)
set (FOLLY_SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/${FOLLY_EXTERNAL_PROJECT}-prefix/src/${FOLLY_EXTERNAL_PROJECT}/folly)

ExternalProject_Add (${FOLLY_EXTERNAL_PROJECT}
    GIT_REPOSITORY "https://github.com/danielsuo/folly.git"
    GIT_TAG "master"
    UPDATE_COMMAND ""
    CONFIGURE_COMMAND cd ${FOLLY_SOURCE_DIR} && autoreconf -ivf configure.ac && ./configure --prefix=${CMAKE_CURRENT_BINARY_DIR}
    BUILD_COMMAND cd ${FOLLY_SOURCE_DIR} && make -j
    INSTALL_COMMAND cd ${FOLLY_SOURCE_DIR} && make install
)

set (FOLLY_EXTERNAL_PROJECT ${FOLLY_EXTERNAL_PROJECT} PARENT_SCOPE)
set (FOLLY_LIBRARY_NAME ${CMAKE_SHARED_LIBRARY_PREFIX}folly${CMAKE_SHARED_LIBRARY_SUFFIX})
set (FOLLY_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include PARENT_SCOPE)
set (FOLLY_LIBRARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/lib PARENT_SCOPE)
file (GLOB FOLLY_LIBRARIES RELATIVE ${CMAKE_CURRENT_BINARY_DIR} lib/*)

add_library (folly SHARED IMPORTED)
set_target_properties(folly PROPERTIES IMPORTED_LOCATION ${FOLLY_LIBRARY_DIR}/${FOLLY_LIBRARY_NAME})
